--- a/templates/data.html
+++ b/templates/data.html
@@ -31,12 +31,14 @@
             <tr>
                 <td style="background-color:darkslategrey; color: white;">User Movie Review</td>
                 <td style="background-color:darkslategrey; color: white;">Prediction</td>
+                <td style="background-color:darkslategrey; color: white;">Feedback</td>
             </tr>
         </th>
         {% for item in data %}
         <tr>
            <td >{{item[0]}}</td>
             <td>{{item[1]}}</td>
+            <td>{{item[2]}}</td>
         </tr>
         {% endfor %}
     </table>
